RESOLVED FIXED124451
WebCrypto no longer uses sequences of ArrayBuffers
https://bugs.webkit.org/show_bug.cgi?id=124451
Summary WebCrypto no longer uses sequences of ArrayBuffers
Alexey Proskuryakov
Reported 2013-11-16 01:07:02 PST
It's been decided at F2F yesterday to undo the new feature in the latest draft where data was passed as sequences of CryptoOperationDatas.
Attachments
proposed patch (72.19 KB, patch)
2013-11-16 01:19 PST, Alexey Proskuryakov
sam: review+
Alexey Proskuryakov
Comment 1 2013-11-16 01:19:53 PST
Created attachment 217122 [details] proposed patch
WebKit Commit Bot
Comment 2 2013-11-16 01:20:56 PST
Attachment 217122 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/crypto/subtle/aes-cbc-192-encrypt-decrypt.html', u'LayoutTests/crypto/subtle/aes-cbc-256-encrypt-decrypt.html', u'LayoutTests/crypto/subtle/aes-cbc-encrypt-decrypt-expected.txt', u'LayoutTests/crypto/subtle/aes-cbc-encrypt-decrypt-with-padding.html', u'LayoutTests/crypto/subtle/aes-cbc-encrypt-decrypt.html', u'LayoutTests/crypto/subtle/aes-cbc-import-jwk.html', u'LayoutTests/crypto/subtle/aes-cbc-wrong-key-class-expected.txt', u'LayoutTests/crypto/subtle/aes-cbc-wrong-key-class.html', u'LayoutTests/crypto/subtle/argument-conversion-expected.txt', u'LayoutTests/crypto/subtle/argument-conversion.html', u'LayoutTests/crypto/subtle/hmac-import-jwk.html', u'LayoutTests/crypto/subtle/hmac-sign-verify-empty-key.html', u'LayoutTests/crypto/subtle/hmac-sign-verify.html', u'LayoutTests/crypto/subtle/rsassa-pkcs1-v1_5-sign-verify.html', u'LayoutTests/crypto/subtle/sha-1-expected.txt', u'LayoutTests/crypto/subtle/sha-1.html', u'LayoutTests/crypto/subtle/sha-224-expected.txt', u'LayoutTests/crypto/subtle/sha-224.html', u'LayoutTests/crypto/subtle/sha-256-expected.txt', u'LayoutTests/crypto/subtle/sha-256.html', u'LayoutTests/crypto/subtle/sha-384-expected.txt', u'LayoutTests/crypto/subtle/sha-384.html', u'LayoutTests/crypto/subtle/sha-512-expected.txt', u'LayoutTests/crypto/subtle/sha-512.html', u'Source/WebCore/ChangeLog', u'Source/WebCore/bindings/js/JSCryptoOperationData.cpp', u'Source/WebCore/bindings/js/JSCryptoOperationData.h', u'Source/WebCore/bindings/js/JSSubtleCryptoCustom.cpp', u'Source/WebCore/crypto/CryptoAlgorithm.cpp', u'Source/WebCore/crypto/CryptoAlgorithm.h', u'Source/WebCore/crypto/CryptoAlgorithmRSASSA_PKCS1_v1_5Mac.cpp', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmAES_CBC.h', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmHMAC.h', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmRSASSA_PKCS1_v1_5.h', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA1.cpp', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA1.h', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA224.cpp', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA224.h', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA256.cpp', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA256.h', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA384.cpp', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA384.h', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA512.cpp', u'Source/WebCore/crypto/algorithms/CryptoAlgorithmSHA512.h', u'Source/WebCore/crypto/mac/CryptoAlgorithmAES_CBCMac.cpp', u'Source/WebCore/crypto/mac/CryptoAlgorithmHMACMac.cpp', u'Source/WebCore/crypto/parameters/CryptoAlgorithmRsaKeyGenParams.h']" exit_code: 1 Source/WebCore/crypto/algorithms/CryptoAlgorithmRSASSA_PKCS1_v1_5.h:45: The parameter name "data" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/crypto/algorithms/CryptoAlgorithmHMAC.h:45: The parameter name "data" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebCore/crypto/CryptoAlgorithmRSASSA_PKCS1_v1_5Mac.cpp:92: CryptoAlgorithmRSASSA_PKCS1_v1_5::sign is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/crypto/CryptoAlgorithmRSASSA_PKCS1_v1_5Mac.cpp:131: CryptoAlgorithmRSASSA_PKCS1_v1_5::verify is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/crypto/mac/CryptoAlgorithmAES_CBCMac.cpp:39: transformAES_CBC is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/crypto/mac/CryptoAlgorithmAES_CBCMac.cpp:86: CryptoAlgorithmAES_CBC::encrypt is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/crypto/mac/CryptoAlgorithmAES_CBCMac.cpp:99: CryptoAlgorithmAES_CBC::decrypt is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Source/WebCore/crypto/CryptoAlgorithm.h:57: The parameter name "data" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 8 in 41 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3 2013-11-16 10:56:35 PST
Alexey Proskuryakov
Comment 4 2013-11-16 11:12:16 PST
Note You need to log in before you can comment on or make changes to this bug.