WebCrypto no longer uses sequences of ArrayBuffers https://bugs.webkit.org/show_bug.cgi?id=124451

Build fix.

* crypto/mac/CryptoAlgorithmHMACMac.cpp: (WebCore::calculateSignature):
Now that the function became shorter, clang realized that a variable was used
uninitialized in an impossible code path.



Canonical link: https://commits.webkit.org/142647@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159380 268f45cc-cd09-0410-ab3c-d52691b4dbfc